--- a/index.html
+++ b/index.html
@@ -36,8 +36,19 @@
     <!-- <a href="http://www.facebook.com">this is anchor</a> -->
 
     <!-- image tag -->
-    <img src="./images/img.jpg" alt="cricket" />
+    <!-- <img src="./images/img.jpg" alt="cricket" /> -->
 
     <!-- <div style="color: red">This is some div</div> -->
+
+    <video width="320" height="240" controls autoplay muted loop>
+      <source src="./video/movie.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+
+    <!-- <iframe
+      width="420"
+      height="315"
+      src="https://www.youtube.com/embed/IknxlIZhwcE"
+    > -->
   </body>
 </html>
