--- a/index.html
+++ b/index.html
@@ -40,15 +40,89 @@
 
     <!-- <div style="color: red">This is some div</div> -->
 
-    <video width="320" height="240" controls autoplay muted loop>
-      <source src="./video/movie.mp4" type="video/mp4" />
-      Your browser does not support the video tag.
-    </video>
+    <!-- 21st -->
+    <!-- Unordered List -->
+    <!-- <ul>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ul> -->
 
-    <!-- <iframe
-      width="420"
-      height="315"
-      src="https://www.youtube.com/embed/IknxlIZhwcE"
-    > -->
+    <!-- Ordered List -->
+    <!-- <ol>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ol> -->
+
+    <input list="browsers" name="browser" id="browser" />
+    <datalist id="browsers">
+      <option value="Edge"></option>
+      <option value="Firefox"></option>
+      <option value="Chrome"></option>
+      <option value="Opera"></option>
+      <option value="Safari"></option>
+    </datalist>
+
+    <!-- video -->
+    <!-- <video src="./video/movie.mp4" controls muted loop autoplay></video> -->
+
+    <!-- audio -->
+    <!-- <audio src="" controls></audio> -->
+
+    <!-- iframe -->
+    <!-- <iframe src="https://www.youtube.com/embed/IknxlIZhwcE"></iframe> -->
+
+    <!-- <table>
+      <th>
+        <td>Name</td>
+        <td>Age</td>
+      </th>
+      <tr>
+        <td>Ram</td>
+        <td>23</td>
+      </tr>
+
+      <tr>
+        <td>Shyam</td>
+        <td>22</td>
+      </tr>
+    </table> -->
+    <!-- 
+    <label>First Name</label>
+    <br />
+    <input type="text" placeholder="" />
+    <hr />
+    <label>Email</label>
+    <input type="email" placeholder="" />
+    <input type="color" placeholder="" />
+    <input type="datetime-local" placeholder="" />
+    <input type="date" placeholder="" />
+    <input type="" placeholder="" />
+    <button>Sub</button> -->
+
+    <!-- checkbox -->
+    <!-- <input type="checkbox" value="passport" name="xyz" /> Passport
+    <input type="checkbox" value="Voter" name="xyz" /> Voter Id
+    <input type="checkbox" value="Aadhar" name="xyz" /> Aadhar -->
+    <hr />
+    <!-- radio -->
+    <!-- <input type="radio" name="xyz" value="0" /> Male <br />
+    <input type="radio" name="xyz" value="1" /> Female <br />
+    <input type="radio" name="xyz" value="2" /> Other -->
+
+    <!-- <select>
+      <option value="">Option 1</option>
+      <option value="">Option 2</option>
+      <option value="">Option 3</option>
+      <option value="">Option 4</option>
+    </select> -->
+
+    <!-- Formatting -->
+    <b>This is bold</b> <br />
+    <strong>This is strong</strong> <br />
+    <i> This is italic</i> <br />
+    <em>Italic</em>
+    <u>underline</u>
   </body>
 </html>
