Day 3: 22 Dec 23 - HTML5

--- a/index.html
+++ b/index.html
@@ -33,15 +33,16 @@
     <span>This is span2 tag</span> -->
 
     <!-- Anchor Tag -->
-    <!-- <a href="http://www.facebook.com">this is anchor</a> -->
+    <!-- <a href="http://www.facebook.com" target="_self">this is anchor</a> -->
 
     <!-- image tag -->
     <!-- <img src="./images/img.jpg" alt="cricket" /> -->
 
     <!-- <div style="color: red">This is some div</div> -->
 
-    <!-- 21st -->
+    <!-- 21 Dec 2023 -->
     <!-- Unordered List -->
+
     <!-- <ul>
       <li>Item 1</li>
       <li>Item 2</li>
@@ -55,17 +56,18 @@
       <li>Item 3</li>
     </ol> -->
 
-    <input list="browsers" name="browser" id="browser" />
+    <!-- Datalist -->
+    <!-- <input list="browsers" name="browser" id="browser" />
     <datalist id="browsers">
       <option value="Edge"></option>
       <option value="Firefox"></option>
       <option value="Chrome"></option>
       <option value="Opera"></option>
       <option value="Safari"></option>
-    </datalist>
+    </datalist> -->
 
     <!-- video -->
-    <!-- <video src="./video/movie.mp4" controls muted loop autoplay></video> -->
+    <!-- <video src="./video/movie.mp4" controls autoplay muted loop></video> -->
 
     <!-- audio -->
     <!-- <audio src="" controls></audio> -->
@@ -87,31 +89,36 @@
         <td>Shyam</td>
         <td>22</td>
       </tr>
+      <tr>
+        <td>Shyam</td>
+        <td>22</td>
+      </tr>
     </table> -->
     <!-- 
     <label>First Name</label>
     <br />
-    <input type="text" placeholder="" />
+    <input type="text" placeholder="Name123" />
     <hr />
     <label>Email</label>
     <input type="email" placeholder="" />
     <input type="color" placeholder="" />
     <input type="datetime-local" placeholder="" />
     <input type="date" placeholder="" />
-    <input type="" placeholder="" />
+    <input type="datetime" placeholder="" />
+    <input type="password" placeholder="" />
     <button>Sub</button> -->
 
     <!-- checkbox -->
     <!-- <input type="checkbox" value="passport" name="xyz" /> Passport
     <input type="checkbox" value="Voter" name="xyz" /> Voter Id
     <input type="checkbox" value="Aadhar" name="xyz" /> Aadhar -->
-    <hr />
+    <!-- <hr /> -->
     <!-- radio -->
-    <!-- <input type="radio" name="xyz" value="0" /> Male <br />
-    <input type="radio" name="xyz" value="1" /> Female <br />
-    <input type="radio" name="xyz" value="2" /> Other -->
-
-    <!-- <select>
+    <!-- <input type="radio" name="gender" value="0" /> Male <br />
+    <input type="radio" name="gender" value="1" /> Female <br />
+    <input type="radio" name="gender" value="2" /> Other -->
+    <!-- 
+    <select>
       <option value="">Option 1</option>
       <option value="">Option 2</option>
       <option value="">Option 3</option>
@@ -119,10 +126,27 @@
     </select> -->
 
     <!-- Formatting -->
-    <b>This is bold</b> <br />
+    <!-- <b>This is bold</b> <br />
     <strong>This is strong</strong> <br />
     <i> This is italic</i> <br />
-    <em>Italic</em>
-    <u>underline</u>
+    <em>Italic</em> <br />
+    <u>underline</u> -->
+
+    <!-- <footer>This is footer</footer>
+    <header>This is header</header>
+    <aside>this is aside</aside> -->
+
+    <!-- <p>Lorem ipsum dolor sit amet consectetur</p>
+
+    <pre>
+      this
+      is
+        pre 
+      tag
+    </pre> -->
+
+    <!-- <textarea name="" id="" cols="5" rows="10"></textarea> -->
+
+    <!-- <input type="number" min="5" max="10" step="3" /> -->
   </body>
 </html>
