--- a/index.html
+++ b/index.html
@@ -1,152 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>demo</title>
+    <title>CSS3</title>
+
+    <!-- Internal -->
+    <!-- 
+    <style>
+      p {
+        color: green;
+        background-color: yellow;
+      }
+    </style> -->
+    <link rel="stylesheet" href="./app.css" />
   </head>
   <body>
-    <!-- This is heading -->
-    <!-- <h1>This is h1</h1>
-    <h2>This is h2</h2>
-    <h3>This is h3</h3>
-    <h4>This is h4</h4>
-    <h5>This is h5</h5>
-    <h6>This is h6</h6> -->
-
-    <!-- paragraph -->
-    <!-- <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum eaque
-      asperiores, omnis suscipit ea eligendi deserunt? Ea numquam, doloremque
-      nobis et quas fugit earum natus voluptatibus, amet ad culpa reiciendis
-      repellendus cum molestias quae facere saepe blanditiis, adipisci rerum
-      voluptates veritatis illo doloribus quia. Labore aliquid impedit at
-      molestiae sed consequuntur, repellendus suscipit facilis, aut pariatur
-      quisquam eos libero illo provident ab itaque et in exercitationem rem unde
-      debitis architecto!
-    </p> -->
-
-    <!-- div tag -->
-    <!-- <div>This is a div1 tag</div>
-    <div>This is a div2 tag</div> -->
-
-    <!-- span -->
-    <!-- <span>This is span1 tag</span>
-    <span>This is span2 tag</span> -->
-
-    <!-- Anchor Tag -->
-    <!-- <a href="http://www.facebook.com" target="_self">this is anchor</a> -->
-
-    <!-- image tag -->
-    <!-- <img src="./images/img.jpg" alt="cricket" /> -->
-
-    <!-- <div style="color: red">This is some div</div> -->
-
-    <!-- 21 Dec 2023 -->
-    <!-- Unordered List -->
-
-    <!-- <ul>
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
-    </ul> -->
-
-    <!-- Ordered List -->
-    <!-- <ol>
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
-    </ol> -->
-
-    <!-- Datalist -->
-    <!-- <input list="browsers" name="browser" id="browser" />
-    <datalist id="browsers">
-      <option value="Edge"></option>
-      <option value="Firefox"></option>
-      <option value="Chrome"></option>
-      <option value="Opera"></option>
-      <option value="Safari"></option>
-    </datalist> -->
-
-    <!-- video -->
-    <!-- <video src="./video/movie.mp4" controls autoplay muted loop></video> -->
-
-    <!-- audio -->
-    <!-- <audio src="" controls></audio> -->
-
-    <!-- iframe -->
-    <!-- <iframe src="https://www.youtube.com/embed/IknxlIZhwcE"></iframe> -->
-
-    <!-- <table>
-      <th>
-        <td>Name</td>
-        <td>Age</td>
-      </th>
-      <tr>
-        <td>Ram</td>
-        <td>23</td>
-      </tr>
-
-      <tr>
-        <td>Shyam</td>
-        <td>22</td>
-      </tr>
-      <tr>
-        <td>Shyam</td>
-        <td>22</td>
-      </tr>
-    </table> -->
+    <!-- Inline -->
+    <!-- <p style="color: red">This is para</p> -->
     <!-- 
-    <label>First Name</label>
-    <br />
-    <input type="text" placeholder="Name123" />
-    <hr />
-    <label>Email</label>
-    <input type="email" placeholder="" />
-    <input type="color" placeholder="" />
-    <input type="datetime-local" placeholder="" />
-    <input type="date" placeholder="" />
-    <input type="datetime" placeholder="" />
-    <input type="password" placeholder="" />
-    <button>Sub</button> -->
+    <p class="xyz">This second para</p>
 
-    <!-- checkbox -->
-    <!-- <input type="checkbox" value="passport" name="xyz" /> Passport
-    <input type="checkbox" value="Voter" name="xyz" /> Voter Id
-    <input type="checkbox" value="Aadhar" name="xyz" /> Aadhar -->
-    <!-- <hr /> -->
-    <!-- radio -->
-    <!-- <input type="radio" name="gender" value="0" /> Male <br />
-    <input type="radio" name="gender" value="1" /> Female <br />
-    <input type="radio" name="gender" value="2" /> Other -->
-    <!-- 
-    <select>
-      <option value="">Option 1</option>
-      <option value="">Option 2</option>
-      <option value="">Option 3</option>
-      <option value="">Option 4</option>
-    </select> -->
+    <p>This is 3rd para</p>
 
-    <!-- Formatting -->
-    <!-- <b>This is bold</b> <br />
-    <strong>This is strong</strong> <br />
-    <i> This is italic</i> <br />
-    <em>Italic</em> <br />
-    <u>underline</u> -->
+    <div>this is div</div>
 
-    <!-- <footer>This is footer</footer>
-    <header>This is header</header>
-    <aside>this is aside</aside> -->
+    <h2 class="xyz" id="someVal">this is heading</h2> -->
 
-    <!-- <p>Lorem ipsum dolor sit amet consectetur</p>
+    <div class="xyz">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur,
+      molestias tempora in exercitationem sunt quos quaerat facilis possimus
+      cupiditate dolores ad architecto aperiam? Doloremque non fuga molestiae.
+      Esse aliquid est corrupti sapiente, ad, magnam, accusamus architecto
+      consequuntur at fugit nulla?
+    </div>
 
-    <pre>
-      this
-      is
-        pre 
-      tag
-    </pre> -->
-
-    <!-- <textarea name="" id="" cols="5" rows="10"></textarea> -->
-
-    <!-- <input type="number" min="5" max="10" step="3" /> -->
+    <div>This ios 2nd id</div>
   </body>
 </html>
