--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>CSS3</title>
 
-    <!-- Internal -->
+    <!-- Internal Style-->
     <!-- 
     <style>
       p {
@@ -11,6 +11,8 @@
         background-color: yellow;
       }
     </style> -->
+
+    <!-- Adding External Style -->
     <link rel="stylesheet" href="./app.css" />
   </head>
   <body>
