--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <h2 class="xyz" id="someVal">this is heading</h2> -->
 
-    <div class="xyz">
+    <!-- <div class="xyz">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur,
       molestias tempora in exercitationem sunt quos quaerat facilis possimus
       cupiditate dolores ad architecto aperiam? Doloremque non fuga molestiae.
@@ -35,6 +35,227 @@
       consequuntur at fugit nulla?
     </div>
 
-    <div>This ios 2nd id</div>
+    <div>This ios 2nd id</div> -->
+
+    <!-- word break and word wrap example-->
+    <!-- <p class="test1">
+      This paragraph contains a very long word: very. The long word will break
+      and wrap to the next line.
+    </p>
+
+    <p class="test2">
+      This paragraph contains a very long word:
+      thisisaveryveryveryveryveryverylongword. The long word will break and wrap
+      to the next line.
+    </p>  -->
+
+    <!-- <p class="abs-len">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus,
+      aliquam?
+    </p> -->
+
+    <!-- <div>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, cum.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, cum.
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi officia,
+        possimus deserunt repellat sapiente adipisci cupiditate fuga dignissimos
+        dolorem modi.
+      </p>
+    </div> -->
+    <!-- 
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, iusto.
+    </p>
+    <div class="font-size">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Et enim doloribus
+      debitis nostrum aspernatur culpa, amet tempora tempore quod nesciunt, ipsa
+      minima sed vitae aperiam? Quaerat itaque aliquid quasi nostrum vero
+      distinctio ipsum est consequuntur exercitationem esse obcaecati,
+      similique, earum illum reiciendis modi labore totam dolore beatae culpa.
+      Nulla alias fugit fuga natus ab odit voluptas laborum doloribus, esse,
+      quia quis ipsa minus perspiciatis. Nam reprehenderit nostrum illo
+      voluptatem perferendis? Magni mollitia nesciunt omnis voluptate tenetur
+      consectetur ipsum molestias alias eligendi eum. Distinctio, eveniet
+      dolores officiis asperiores rerum, ratione non saepe architecto sint nulla
+      error natus earum minus mollitia eos.
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, magni.
+      </p> 
+    </div>-->
+
+    <!-- ---------------------------------------- -->
+
+    <!-- Inline Block Demo -->
+
+    <!-- <span>This is span 1</span>
+    <span>This is span 2</span>
+
+    <div>This is div1</div>
+    <div>This is div 2</div> -->
+
+    <!-- ---------------------------------------- -->
+
+    <!-- Sticky Demo -->
+
+    <!-- <div class="conatiner">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
+        sequi, adipisci cumque similique placeat rem doloremque ut dolores nisi
+        repellat quas fugit alias facilis ullam explicabo in perspiciatis ea
+        eaque est. Reiciendis maiores hic nihil totam magni nostrum pariatur
+        laboriosam ullam fuga officiis vero quod cum aperiam, veritatis
+        repudiandae id a asperiores eligendi molestiae alias temporibus quas,
+        quae sint quos? Maxime officiis quaerat architecto eveniet beatae
+        praesentium similique aut facilis cupiditate, nemo possimus laboriosam
+        hic aperiam, aliquam inventore nam, excepturi reprehenderit deleniti
+        veritatis? Odio ut praesentium nam debitis eos, doloribus quibusdam enim
+        ea placeat totam in ipsum minima qui similique.
+      </p>
+
+      <header>
+        <p>This is header tag</p>
+      </header>
+      <main>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio
+        repellat minima fugiat ex repudiandae atque, libero saepe reiciendis
+        quidem animi blanditiis natus harum quam doloremque nam dolore vero eius
+        consequuntur non? Minima animi ducimus quis fugit iusto. Consequuntur
+        voluptatem labore iure perspiciatis autem, ab eos commodi vel tenetur,
+        eaque sunt in fugit consectetur numquam corrupti. Quasi, unde corporis
+        ipsum dolorem vitae placeat adipisci ipsam nam fugit impedit, molestiae
+        a alias quis ducimus exercitationem debitis. Ipsa consectetur quia unde
+        fuga vel fugiat corporis possimus nesciunt officia autem cum placeat
+        libero deserunt deleniti quos beatae, omnis eveniet explicabo qui
+        dignissimos expedita? Corrupti? Lorem ipsum dolor sit amet, consectetur
+        adipisicing elit. Distinctio repellat minima fugiat ex repudiandae
+        atque, libero saepe reiciendis quidem animi blanditiis natus harum quam
+        doloremque nam dolore vero eius consequuntur non? Minima animi ducimus
+        quis fugit iusto. Consequuntur voluptatem labore iure perspiciatis
+        autem, ab eos commodi vel tenetur, eaque sunt in fugit consectetur
+        numquam corrupti. Quasi, unde corporis ipsum dolorem vitae placeat
+        adipisci ipsam nam fugit impedit, molestiae a alias quis ducimus
+        exercitationem debitis. Ipsa consectetur quia unde fuga vel fugiat
+        corporis possimus nesciunt officia autem cum placeat libero deserunt
+        deleniti quos beatae, omnis eveniet explicabo qui dignissimos expedita?
+        Corrupti? Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Distinctio repellat minima fugiat ex repudiandae atque, libero saepe
+        reiciendis quidem animi blanditiis natus harum quam doloremque nam
+        dolore vero eius consequuntur non? Minima animi ducimus quis fugit
+        iusto. Consequuntur voluptatem labore iure perspiciatis autem, ab eos
+        commodi vel tenetur, eaque sunt in fugit consectetur numquam corrupti.
+        Quasi, unde corporis ipsum dolorem vitae placeat adipisci ipsam nam
+        fugit impedit, molestiae a alias quis ducimus exercitationem debitis.
+        Ipsa consectetur quia unde fuga vel fugiat corporis possimus nesciunt
+        officia autem cum placeat libero deserunt deleniti quos beatae, omnis
+        eveniet explicabo qui dignissimos expedita? Corrupti? Lorem ipsum dolor
+        sit amet, consectetur adipisicing elit. Distinctio repellat minima
+        fugiat ex repudiandae atque, libero saepe reiciendis quidem animi
+        blanditiis natus harum quam doloremque nam dolore vero eius consequuntur
+        non? Minima animi ducimus quis fugit iusto. Consequuntur voluptatem
+        labore iure perspiciatis autem, ab eos commodi vel tenetur, eaque sunt
+        in fugit consectetur numquam corrupti. Quasi, unde corporis ipsum
+        dolorem vitae placeat adipisci ipsam nam fugit impedit, molestiae a
+        alias quis ducimus exercitationem debitis. Ipsa consectetur quia unde
+        fuga vel fugiat corporis possimus nesciunt officia autem cum placeat
+        libero deserunt deleniti quos beatae, omnis eveniet explicabo qui
+        dignissimos expedita? Corrupti? Lorem ipsum dolor sit amet, consectetur
+        adipisicing elit. Distinctio repellat minima fugiat ex repudiandae
+        atque, libero saepe reiciendis quidem animi blanditiis natus harum quam
+        doloremque nam dolore vero eius consequuntur non? Minima animi ducimus
+        quis fugit iusto. Consequuntur voluptatem labore iure perspiciatis
+        autem, ab eos commodi vel tenetur, eaque sunt in fugit consectetur
+        numquam corrupti. Quasi, unde corporis ipsum dolorem vitae placeat
+        adipisci ipsam nam fugit impedit, molestiae a alias quis ducimus
+        exercitationem debitis. Ipsa consectetur quia unde fuga vel fugiat
+        corporis possimus nesciunt officia autem cum placeat libero deserunt
+        deleniti quos beatae, omnis eveniet explicabo qui dignissimos expedita?
+        Corrupti? Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Distinctio repellat minima fugiat ex repudiandae atque, libero saepe
+        reiciendis quidem animi blanditiis natus harum quam doloremque nam
+        dolore vero eius consequuntur non? Minima animi ducimus quis fugit
+        iusto. Consequuntur voluptatem labore iure perspiciatis autem, ab eos
+        commodi vel tenetur, eaque sunt in fugit consectetur numquam corrupti.
+        Quasi, unde corporis ipsum dolorem vitae placeat adipisci ipsam nam
+        fugit impedit, molestiae a alias quis ducimus exercitationem debitis.
+        Ipsa consectetur quia unde fuga vel fugiat corporis possimus nesciunt
+        officia autem cum placeat libero deserunt deleniti quos beatae, omnis
+        eveniet explicabo qui dignissimos expedita? Corrupti?
+      </main>
+    </div> -->
+
+    <!-- ---------------------------------------- -->
+
+    <!-- Absolute Demo -->
+
+    <!-- <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate
+      laborum, in voluptatum, inventore illum accusamus, quos harum error veniam
+      delectus adipisci deleniti. Temporibus quo ducimus alias eligendi, qui
+      vitae asperiores, iste dolor adipisci officia quae delectus omnis fugit
+      earum nemo commodi error aliquam obcaecati incidunt corporis reprehenderit
+      minus, similique reiciendis? Perferendis, magnam doloremque. Inventore at
+      animi et fuga modi est ipsum earum molestiae dolores hic! Inventore itaque
+      nihil possimus vero nostrum atque similique quod ex doloremque explicabo.
+      Perspiciatis, dolorem. Quisquam, rerum aspernatur ex voluptate laboriosam
+      unde. Excepturi, minus suscipit quas saepe qui aliquid perferendis. Sed
+      quod modi quidem ullam reprehenderit!
+    </p>
+    <div class="super-parent">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+      cupiditate commodi perferendis doloribus maxime hic ipsam officiis iste,
+      deleniti placeat sint aliquid consequatur, expedita saepe, in accusantium
+      provident. Possimus, molestias soluta rerum delectus illo, obcaecati vel
+      nisi porro odio voluptate, exercitationem modi dolor tempora sunt quasi
+      reiciendis aliquam libero nostrum temporibus magni vitae unde hic
+      voluptatum eius! Eum officiis unde voluptate est amet delectus placeat?
+      Tenetur corporis aliquid harum numquam at cupiditate aspernatur. Nihil
+      aliquam animi consequatur amet esse corrupti officiis nobis magnam modi
+      eveniet, sit eius incidunt natus explicabo ullam quasi quia recusandae
+      odit numquam voluptates ducimus fugit? Perspiciatis?
+
+      <div class="parent">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+        voluptatem, accusantium doloremque rem quo dicta quaerat. Quibusdam,
+        rem. Dolores qui similique mollitia sit culpa quam praesentium
+        temporibus eveniet aut. Atque distinctio suscipit esse laudantium
+        accusantium eos deleniti ab fugiat libero! Tempora, quas voluptas nemo
+        magni amet beatae explicabo molestias dicta itaque incidunt recusandae
+        iure suscipit assumenda fugiat impedit ipsum praesentium sed reiciendis
+        asperiores adipisci sapiente accusamus! Pariatur recusandae omnis
+        eligendi ex quisquam aperiam, sed sit incidunt inventore tempora,
+        sapiente explicabo! Omnis inventore minima asperiores, doloremque,
+        suscipit quidem voluptates blanditiis ipsum quos beatae necessitatibus
+        placeat amet qui modi commodi sit porro.
+
+        <div class="child">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates
+          sed accusamus mollitia tempora dicta. Obcaecati excepturi optio
+          nostrum iste aspernatur.
+        </div>
+      </div>
+    </div> -->
+
+    <!-- <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem deserunt
+      ipsam odio? Praesentium explicabo excepturi quidem unde perspiciatis,
+      commodi porro vero enim. Aspernatur, excepturi, praesentium, recusandae
+      nihil iste modi ex ut explicabo ea optio tempora a. Deleniti iste quia
+      consequatur, quidem rerum vitae atque dolor dicta itaque accusantium iure
+      assumenda expedita, est modi porro. Sunt consequuntur nostrum excepturi id
+      deserunt ipsam laborum, quasi cum nesciunt consectetur porro obcaecati ex
+      adipisci eius recusandae cupiditate delectus quos numquam in laudantium
+      rem dolores unde veniam quisquam. Ratione repudiandae officia, quam atque
+      cum fugiat a, eius aliquid impedit iure mollitia. Ea deserunt facilis
+      eveniet.
+    </p>
+
+    <!-- Opacity Demo -->
+
+    <!-- ---------------------------------------- -->
+
+    <!-- Opacity Demo -->
+
+    <!-- <h3 class="opacity-demo">this is heading</h3> -->
   </body>
 </html>
