--- a/index_html.html
+++ b/index_html.html
@@ -90,9 +90,9 @@
     <!-- <iframe src="https://www.youtube.com/embed/UXVEKJNzLA4"></iframe> -->
     <!-- 
     <table>
-      <th>
-        <td>Name</td>
-        <td>Age</td>
+      <tr>
+        <th>Name</th>
+        <th>Age</th>
       </th>
       <tr>
         <td>Ram</td>
