--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
       href="https://fonts.googleapis.com/css2?family=Rubik+Broken+Fax&display=swap"
       rel="stylesheet"
     /> -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    />
+    /> -->
     <link rel="stylesheet" href="./app.css" />
+
+    <script src="./js/app.js"></script>
+    <script src="./js/index.js"></script>
   </head>
   <body>
     <!-- Inline -->
@@ -652,7 +655,7 @@
     </table>   -->
 
     <!-- Transform Property -->
-    <h1>The transform Property</h1>
+    <!-- <h1>The transform Property</h1> -->
 
     <!-- <h2>transform: rotate(20deg):</h2>
     <div class="a">Hello World!</div>
@@ -683,7 +686,7 @@
     <br /> -->
 
     <!-- <img id="div1" src="./images/cricket/img.jpg" alt="" /> -->
-
+    <!-- 
     <div class="alert1 alert-primary1" role="alert">
       A simple primary alert—check it out!
     </div>
@@ -707,6 +710,26 @@
     </div>
     <div class="alert alert-dark" role="alert">
       A simple dark alert—check it out!
-    </div>
+    </div> -->
+
+    <!-- <div class="container">
+      <h2>This is heading</h2>
+      <span>This is span</span>
+      <img src="./micky_mouse.jpg" />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+        repellat nostrum reiciendis quaerat officia. Omnis maiores, quos
+        blanditiis deserunt distinctio eos laboriosam laudantium reiciendis,
+        minus amet libero totam. Vel ratione officia non quidem voluptate,
+        praesentium, quisquam pariatur expedita laboriosam cumque cum voluptates
+        vero aliquam et natus cupiditate, eum maxime omnis voluptatum corrupti
+        quod dolorum? Quo laboriosam culpa praesentium aliquid voluptatibus quis
+        minus sint magnam dolor fuga asperiores facere, vero assumenda quos quod
+        ipsam in eaque! Cumque ipsa ipsum cupiditate neque doloremque dolorum
+        cum veritatis, sit quasi dicta libero exercitationem nemo laborum
+        laboriosam, quisquam voluptatibus excepturi dignissimos, accusamus fuga
+        atque odio!
+      </p>
+    </div> -->
   </body>
 </html>
