--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <title>JS</title>
     <script src="./js/app.js"></script>
+    <link rel="stylesheet" href="./app_js.css" />
   </head>
-  <body></body>
+  <body>
+    <div
+      onmouseleave="mouseLeaveFn()"
+      onmouseenter="mouseEnterFn()"
+      onclick="mouseClickFn()"
+      class="container"
+    ></div>
+  </body>
 </html>
