--- a/index.html
+++ b/index.html
@@ -2,15 +2,61 @@
 <html lang="en">
   <head>
     <title>JS</title>
-    <script src="./js/app.js"></script>
+    <script src="./js/app.js" defer></script>
     <link rel="stylesheet" href="./app_js.css" />
   </head>
   <body>
-    <div
+    <!-- <div
       onmouseleave="mouseLeaveFn()"
       onmouseenter="mouseEnterFn()"
       onclick="mouseClickFn()"
       class="container"
-    ></div>
+    ></div> -->
+
+    <!-- <input type="button" value="1" onclick="handleClick(1)" />
+    <input type="button" value="2" onclick="handleClick(2)" />
+    <input type="button" value="3" onclick="handleClick(3)" /> -->
+
+    <!-- reading Forms -->
+
+    <!-- <form name="demoForm">
+      <label>First Name</label>
+      <input type="text" name="fName" id="" />
+      <br />
+      <label>Last Name</label>
+      <input type="text" name="lName" id="" />
+      <br />
+      <input type="radio" name="gender" id="" value="1" /> Male
+      <input type="radio" name="gender" id="" value="2" /> Female
+      <input type="radio" name="gender" id="" value="3" /> Other
+      <br />
+      <select name="language" id="">
+        <option value="english">English</option>
+        <option value="kannada">Kannada</option>
+        <option value="tamil">Tamil</option>
+        <option value="hindi">Hindi</option>
+        <option value="bengali">Bengali</option>
+      </select>
+      <br />
+      <input type="checkbox" name="idProof" id="" value="1" /> Aadhar
+      <input type="checkbox" name="idProof" id="" value="2" /> Passport
+      <input type="checkbox" name="idProof" id="" value="3" /> DL
+
+      <br />
+      <input type="color" name="myColor" id="" />
+
+      <input type="button" onclick="handleClick()" value="Submit" />
+      <input type="reset" value="Reset" />
+    </form> -->
+
+    <div id="container">
+      <p id="country" class="intro">
+        <span>India is our country.</span>
+      </p>
+      <p id="state" class="intro">
+        <span>We live in Bangalore.</span>
+      </p>
+      <span class="intro">span</span>
+    </div>
   </body>
 </html>
