--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <input type="reset" value="Reset" />
     </form> -->
 
-    <div id="container">
+    <!-- <div id="container">
       <p id="country" class="intro">
         <span>India is our country.</span>
       </p>
@@ -57,6 +57,6 @@
         <span>We live in Bangalore.</span>
       </p>
       <span class="intro">span</span>
-    </div>
+    </div> -->
   </body>
 </html>
