--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <title>JS</title>
-    <script src="./js/app.js" defer></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="./js/app.js"></script>
     <link rel="stylesheet" href="./app_js.css" />
   </head>
   <body>
@@ -58,5 +59,11 @@
       </p>
       <span class="intro">span</span>
     </div> -->
+
+    <p>this is para</p>
+
+    <span class="intro">This is span 1</span>
+    <span id="country">This is span 2</span>
+    <span>This is span 3</span>
   </body>
 </html>
