update folder structure

--- a/html/index.html
+++ b/html/index.html
@@ -1,69 +1,175 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <title>JS</title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="./js/app.js"></script>
-    <link rel="stylesheet" href="./app_js.css" />
+    <title>demo 123</title>
+    <link rel="stylesheet" href="./app.css" />
   </head>
   <body>
-    <!-- <div
-      onmouseleave="mouseLeaveFn()"
-      onmouseenter="mouseEnterFn()"
-      onclick="mouseClickFn()"
-      class="container"
-    ></div> -->
+    <!-- This is heading -->
+    <!-- <h1>This is h1</h1>
+    <h2>This is h2</h2>
+    <h3>This is h3</h3>
+    <h4>This is h4</h4>
+    <h5>This is h5</h5>
+    <h6>This is h6</h6> -->
+    <br />
+    <!-- paragraph -->
+    <!-- <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum eaque
+      asperiores, omnis suscipit ea eligendi deserunt? Ea numquam, doloremque
+      nobis et quas fugit earum natus voluptatibus, amet ad culpa reiciendis
+      repellendus cum molestias quae facere saepe blanditiis, adipisci rerum
+      voluptates veritatis illo doloribus quia. Labore aliquid impedit at
+      molestiae sed consequuntur, repellendus suscipit facilis, aut pariatur
+      quisquam eos libero illo provident ab itaque et in exercitationem rem unde
+      debitis architecto!
+    </p>
 
-    <!-- <input type="button" value="1" onclick="handleClick(1)" />
-    <input type="button" value="2" onclick="handleClick(2)" />
-    <input type="button" value="3" onclick="handleClick(3)" /> -->
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum eaque
+      asperiores, omnis suscipit ea eligendi deserunt? Ea numquam, doloremque
+      nobis et quas fugit earum natus voluptatibus, amet ad culpa reiciendis
+      repellendus cum molestias quae facere saepe blanditiis, adipisci rerum
+      voluptates veritatis illo doloribus quia. Labore aliquid impedit at
+      molestiae sed consequuntur, repellendus suscipit facilis, aut pariatur
+      quisquam eos libero illo provident ab itaque et in exercitationem rem unde
+      debitis architecto!
+    </p> -->
 
-    <!-- reading Forms -->
+    <!-- div tag -->
+    <!-- <div>This is a div1 tag</div>
+    <div>This is a div2 tag</div> -->
 
-    <!-- <form name="demoForm">
-      <label>First Name</label>
-      <input type="text" name="fName" id="" />
-      <br />
-      <label>Last Name</label>
-      <input type="text" name="lName" id="" />
-      <br />
-      <input type="radio" name="gender" id="" value="1" /> Male
-      <input type="radio" name="gender" id="" value="2" /> Female
-      <input type="radio" name="gender" id="" value="3" /> Other
-      <br />
-      <select name="language" id="">
-        <option value="english">English</option>
-        <option value="kannada">Kannada</option>
-        <option value="tamil">Tamil</option>
-        <option value="hindi">Hindi</option>
-        <option value="bengali">Bengali</option>
-      </select>
-      <br />
-      <input type="checkbox" name="idProof" id="" value="1" /> Aadhar
-      <input type="checkbox" name="idProof" id="" value="2" /> Passport
-      <input type="checkbox" name="idProof" id="" value="3" /> DL
+    <!-- span -->
+    <!-- <span>This is span1 tag.</span>
+    <span>This is span2 tag.</span>
+    <span>This is span 3 tag.</span> -->
 
-      <br />
-      <input type="color" name="myColor" id="" />
+    <!-- Anchor Tag -->
+    <!-- <a href="http://www.facebook.com" target="_blank">this is anchor</a> -->
 
-      <input type="button" onclick="handleClick()" value="Submit" />
-      <input type="reset" value="Reset" />
-    </form> -->
+    <!-- image tag -->
 
-    <!-- <div id="container">
-      <p id="country" class="intro">
-        <span>India is our country.</span>
-      </p>
-      <p id="state" class="intro">
-        <span>We live in Bangalore.</span>
-      </p>
-      <span class="intro">span</span>
-    </div> -->
+    <!-- <img src="./images/cricket/img.jpg" alt="cricket" /> -->
 
-    <p>this is para</p>
+    <!-- <div style="color: blue">This is some div</div> -->
 
-    <span class="intro">This is span 1</span>
-    <span id="country">This is span 2</span>
-    <span>This is span 3</span>
+    <!-- 21 Dec 2023 -->
+    <!-- Unordered List -->
+
+    <!-- <ul>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ul> -->
+
+    <!-- Ordered List -->
+    <!-- <ol>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ol> -->
+
+    <!-- Datalist -->
+    <!-- <input list="browsers1" name="browser" id="browser" />
+    <datalist id="browsers1">
+      <option value="Edge"></option>
+      <option value="Firefox"></option>
+      <option value="Chrome"></option>
+      <option value="Opera"></option>
+      <option value="Safari"></option>
+    </datalist> -->
+
+    <!-- video -->
+    <!-- <video src="./video/movie.mp4" controls muted autoplay loop></video> -->
+
+    <!-- audio -->
+    <!-- <audio src="" controls></audio> -->
+
+    <!-- iframe -->
+    <!-- <iframe src="https://www.youtube.com/embed/UXVEKJNzLA4"></iframe> -->
+    <!-- 
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Age</th>
+      </th>
+      <tr>
+        <td>Ram</td>
+        <td>23</td>
+      </tr>
+
+      <tr>
+        <td>Shyam</td>
+        <td>22</td>
+      </tr>
+      <tr>
+        <td>Shyam</td>
+        <td>22</td>
+      </tr>
+      <tr>
+        <td>Shyam</td>
+        <td>22</td>
+      </tr>
+    </table>  -->
+
+    <!-- <label>First Name</label>
+    <br />
+    <input type="text" placeholder="Name" />
+    <hr />
+    <label>Email</label>
+    <input type="email" placeholder="" />
+    <input type="color" placeholder="" />
+    <input type="datetime-local" placeholder="" />
+    <input type="date" placeholder="" />
+    <input type="datetime" placeholder="" />
+    <input type="password" placeholder="" />
+
+    <input type="button" value="Submit123" />
+
+    <button>Sub</button> -->
+
+    <!-- checkbox -->
+    <!-- <input type="checkbox" value="passport" name="xyz" /> Passport
+    <input type="checkbox" value="Voter" name="xyz" /> Voter Id
+    <input type="checkbox" value="Aadhar" name="xyz" /> Aadhar -->
+    <!-- <hr /> -->
+    <!-- radio -->
+    <!-- <input type="radio" name="gender" value="0" /> Male <br />
+    <input type="radio" name="gender" value="1" /> Female <br />
+    <input type="radio" name="gender2" value="2" /> Other -->
+    <!-- 
+    <select>
+      <option value="">Option 1</option>
+      <option value="">Option 2</option>
+      <option value="">Option 3</option>
+      <option value="">Option 4</option>
+    </select> -->
+
+    <!-- Formatting -->
+    <!-- <b>This is bold</b> <br />
+    <strong>This is strong</strong> <br />
+    <i> This is italic</i> <br />
+    <em>Italic</em> <br />
+    <u>underline</u> -->
+
+    <!-- <div>this is div</div>
+    <footer>This is footer</footer>
+    <aside>this is aside</aside>
+    <header>This is header</header> -->
+
+    <!-- <p>Lorem ipsum dolor sit amet consectetur</p>
+
+    <pre>
+      this
+      is
+        pre 
+      tag
+    </pre> -->
+
+    <!-- <input type="text" /> -->
+    <!-- <textarea name="" id="" cols="5" rows="5"></textarea> -->
+
+    <!-- <input type="number" min="5" max="10" step="3" /> -->
   </body>
 </html>
